Update with baseline model

--- a/Modeling.ipynb
+++ b/Modeling.ipynb
@@ -43,7 +43,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "01333669-79d5-43e5-a8ff-72cf70aea6ee"
+        "outputId": "0397e33d-1717-48ee-e305-afc6d9f7027f"
       },
       "source": [
         "import os\n",
@@ -56,13 +56,15 @@
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
         "import pandas as pd\n",
+        "from sklearn.dummy import DummyClassifier\n",
+        "from sklearn.metrics import accuracy_score\n",
         "from keras.callbacks import EarlyStopping\n",
         "from keras import models, layers\n",
         "from keras import optimizers, losses\n",
         "from keras.applications import DenseNet121, Xception\n",
         "from tensorflow.keras.models import Model"
       ],
-      "execution_count": 82,
+      "execution_count": 116,
       "outputs": [
         {
           "output_type": "stream",
@@ -94,11 +96,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Wy5Qbefbhy0h",
-        "outputId": "a4935583-59a5-42dc-ea30-5ff5dd71d91b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Wy5Qbefbhy0h",
+        "outputId": "a4935583-59a5-42dc-ea30-5ff5dd71d91b"
       },
       "source": [
         "from google.colab import drive\n",
@@ -159,11 +161,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "inEVt-GTluN4",
-        "outputId": "130be84a-f2b9-4c64-af12-bc0c630953de",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 232
-        }
+        },
+        "outputId": "130be84a-f2b9-4c64-af12-bc0c630953de"
       },
       "source": [
         "os.mkdir(f'/content/cars_train/pre-split/')\n",
@@ -480,6 +482,52 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "qGPgXl6QEUe8"
+      },
+      "source": [
+        "Build baseline dummy classifier"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7dUz5UqXET5N",
+        "outputId": "729039d6-c767-4963-d61b-153441b47bea",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "train_labels_list = []\n",
+        "for label in train_labels:\n",
+        "  train_labels_list.append(list(label).index(1))\n",
+        "test_labels_list = []\n",
+        "for label in test_labels:\n",
+        "  test_labels_list.append(list(label).index(1))\n",
+        "\n",
+        "y_train_dummy = train_labels_list\n",
+        "y_test_dummy = test_labels_list\n",
+        "x_train_dummy = [0]*len(y_train_dummy)\n",
+        "x_test_dummy = [0]*len(y_test_dummy)\n",
+        "dc = DummyClassifier(strategy='stratified', random_state=84)\n",
+        "dc.fit(x_train_dummy, y_train_dummy)\n",
+        "y_test_pred_dc = x_test_dummy\n",
+        "print('Test Accuracy Score:', accuracy_score(y_test_dummy, y_test_pred_dc))"
+      ],
+      "execution_count": 122,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Test Accuracy Score: 0.005369127516778523\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "5UAZc9FzhEkG"
       },
       "source": [
@@ -531,10 +579,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "dh4otN93ROfG",
-        "outputId": "b00ad449-8990-400f-b518-0c73b0d9cc43",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b00ad449-8990-400f-b518-0c73b0d9cc43"
       },
       "source": [
         "es = EarlyStopping(monitor='val_loss', mode='min', verbose=1, patience=2)\n",
@@ -629,10 +677,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "qOCup4NYF8gu",
-        "outputId": "2d508d98-9cf7-412c-e375-0def38654959",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2d508d98-9cf7-412c-e375-0def38654959"
       },
       "source": [
         "model.compile(optimizer='Adam',loss='categorical_crossentropy',\n",
@@ -681,11 +729,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1FbPS9FGwxL8",
-        "outputId": "85857221-35af-42ef-c73c-2f7114e92f59",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "1FbPS9FGwxL8",
+        "outputId": "85857221-35af-42ef-c73c-2f7114e92f59"
       },
       "source": [
         "Xception_train_generator = ImageDataGenerator().flow_from_directory(\n",
@@ -794,11 +842,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Xd2tBWs-yBbi",
-        "outputId": "68a88d0a-da2f-444c-d1fe-3be774e70253",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Xd2tBWs-yBbi",
+        "outputId": "68a88d0a-da2f-444c-d1fe-3be774e70253"
       },
       "source": [
         "Xception_model.compile(optimizer='Adam',loss='binary_crossentropy',\n",
@@ -832,17 +880,6 @@
           "name": "stdout"
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "YpfrMNXoyekj"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
