Update with code comments

--- a/Modeling.ipynb
+++ b/Modeling.ipynb
@@ -160,38 +160,23 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "inEVt-GTluN4",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 232
-        },
-        "outputId": "130be84a-f2b9-4c64-af12-bc0c630953de"
+        "id": "inEVt-GTluN4"
       },
       "source": [
+        "#Create folder for each image class\n",
         "os.mkdir(f'/content/cars_train/pre-split/')\n",
         "for num in range(1,197):\n",
         "  os.mkdir(f'/content/cars_train/pre-split/{num}')\n",
         "\n",
+        "#Load file with image class data and use to place image files in correct class folder\n",
         "annotations = scipy.io.loadmat('/content/devkit/cars_train_annos.mat')['annotations'][0]\n",
         "for index, annotation in enumerate(annotations):\n",
         "  im_class = annotation[4][0][0]\n",
         "  im_name = str(index+1).zfill(5) + '.jpg'\n",
         "  shutil.move(f'/content/cars_train/{im_name}', f'/content/cars_train/pre-split/{im_class}/{im_name}')\n"
       ],
-      "execution_count": 85,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "FileExistsError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mFileExistsError\u001b[0m                           Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-85-661032e17328>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmkdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'/content/cars_train/pre-split/'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mnum\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m197\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m   \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmkdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'/content/cars_train/pre-split/{num}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mannotations\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mscipy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mio\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloadmat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/content/devkit/cars_train_annos.mat'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'annotations'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mFileExistsError\u001b[0m: [Errno 17] File exists: '/content/cars_train/pre-split/'"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -262,7 +247,7 @@
         "id": "zA3_OP_11hN3"
       },
       "source": [
-        "Generate image data from .jpg files"
+        "Generate image data from .jpg files for train, test and validation classes"
       ]
     },
     {
@@ -406,14 +391,17 @@
         "outputId": "ddc6075c-daec-4acc-9c3f-7ee726de5a2e"
       },
       "source": [
+        "#Create df with image class data variable\n",
         "im_classes = []\n",
         "for image in scipy.io.loadmat('/content/devkit/cars_train_annos.mat')['annotations'][0]:\n",
         "  im_classes.append(image[4][0][0])\n",
         "class_df = pd.DataFrame(data=im_classes, columns=['Class'])\n",
         "\n",
+        "#Print list of 5 most and least common classes with counts\n",
         "print(class_df.reset_index().groupby('Class').count()['index'].sort_values(ascending=False))\n",
         "print('Average Class Size', (train_batch_size+test_batch_size+val_batch_size)/196)\n",
         "\n",
+        "#Plot seaborn countplot of class distribution\n",
         "fig, ax = plt.subplots(figsize=(10,10))\n",
         "sns.countplot(data=class_df, x='Class', ax=ax)\n",
         "ax.set_title('Car Image Class Distribution', fontsize=20)\n",
@@ -491,13 +479,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7dUz5UqXET5N",
-        "outputId": "729039d6-c767-4963-d61b-153441b47bea",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7dUz5UqXET5N",
+        "outputId": "729039d6-c767-4963-d61b-153441b47bea"
       },
       "source": [
+        "# Create non-one hot encoded variables with class data for the train/test sets\n",
         "train_labels_list = []\n",
         "for label in train_labels:\n",
         "  train_labels_list.append(list(label).index(1))\n",
@@ -505,6 +494,7 @@
         "for label in test_labels:\n",
         "  test_labels_list.append(list(label).index(1))\n",
         "\n",
+        "#Build and evaluate baseline dummy classifier\n",
         "y_train_dummy = train_labels_list\n",
         "y_test_dummy = test_labels_list\n",
         "x_train_dummy = [0]*len(y_train_dummy)\n",
